--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,17 @@ streamlit>=1.36
 
 # Optional observability
 langsmith>=0.1.83
+
+# Testing dependencies
+pytest>=7.4.0
+pytest-cov>=4.1.0
+pytest-asyncio>=0.21.0
+pytest-mock>=3.11.0
+pytest-benchmark>=4.0.0
+httpx>=0.27
+
+# Code quality
+black>=23.0.0
+flake8>=6.0.0
+isort>=5.12.0
+mypy>=1.5.0
